Replace ImmutableList usages
Relates to https://github.com/crate/crate/issues/10510